--- a/scss/components/coloredBox.scss
+++ b/scss/components/coloredBox.scss
@@ -3,13 +3,15 @@
 
     &_grid {
         max-width: none;
-        display: flex;
-        flex-wrap: wrap;
         margin: 0 -15px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
     }
 
     &__item {
-        display: flex;
         background: #FFFFFF;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         border-radius: 15px;
@@ -17,13 +19,20 @@
         overflow: hidden;
         transition: 0.3s;
 
+        @media (min-width: 768px) {
+            display: flex;
+        }
+
         &:hover {
             box-shadow: 0 5px 10px rgba(24, 33, 42, 0.08);
         }
 
         .coloredBox_grid & {
-            width: calc(50% - 30px);
-            margin: 0 15px 30px;
+            margin: 0 15px 20px;
+
+            @media (min-width: 768px) {
+                width: calc(50% - 30px);
+            }
         }
     }
 
@@ -32,17 +41,22 @@
         // left: 0;
         // top: 0;
         text-align: center;
-        transform: rotate(180deg);
         color: $color_withe;
-        writing-mode: vertical-rl;
         font-weight: 900;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 159.52%;
         text-align: center;
         letter-spacing: 0.105em;
         text-transform: lowercase;
-        padding: 13px;
+        padding: 4px 13px 6px;
         background: #A3A3A3;
+
+        @media (min-width: 768px) {
+            transform: rotate(180deg);
+            writing-mode: vertical-rl;
+            font-size: 14px;
+            padding: 13px;
+        }
 
         &.success {
             background: $color_success;
@@ -60,41 +74,63 @@
     &__body {
         flex-grow: 1;
         min-width: 0;
-        margin: 35px 30px;
+        margin: 20px 20px 29px;
+
+        @media (min-width: 768px) {
+            margin: 35px 30px;
+        }
     }
 
     &__name {
         display: flex;
         justify-content: space-between;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 138.3%;
-        margin-bottom: 15px;
+        margin-bottom: 11px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+            margin-bottom: 15px;
+        }
     }
 
     &__count {
-        font-size: 16px;
+        font-size: 14px;
         line-height: 138.3%;
         text-align: right;
         color: #A3A3A3;
-        margin-left: 20px;
+        margin-left: 10px;
+
+        @media (min-width: 768px) {
+            font-size: 16px;
+            margin-left: 20px;
+        }
     }
 
     &__text {
         font-size: 14px;
         line-height: 1.57;
-        margin-bottom: 21px;
+        margin-bottom: 14px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 21px;
+        }
     }
 
     &__more {
         a {
             font-weight: 800;
-            font-size: 14px;
+            font-size: 12px;
             line-height: 182.85%;
             letter-spacing: 0.05em;
             text-transform: uppercase;
             color: $color_primary;
             text-decoration: none;
+
+            @media (min-width: 768px) {
+                font-size: 14px;
+            }
 
             &:hover {
                 text-decoration: underline;
