--- a/scss/components/count.scss
+++ b/scss/components/count.scss
@@ -1,7 +1,11 @@
 .count {
     display: inline-flex;
     vertical-align: middle;
-    margin: 0 8px 0 11px;
+    margin: 0 5px 0 0;
+
+    @media (min-width: 768px) {
+        margin: 0 8px 0 11px;
+    }
 
     input[type="number"] {
         width: 32px;
