--- a/scss/components/lkNav.scss
+++ b/scss/components/lkNav.scss
@@ -1,33 +1,75 @@
 .lkNav {
     list-style: none;
-    padding: 0;
-    margin: 0 0 40px;
-    font-size: 16px;
+    padding: 0 15px 0 0;
+    margin: 0 -15px 12px;
+    font-size: 12px;
     line-height: 1.56;
+    white-space: nowrap;
+    border-bottom: 1px solid #E7E7E7;
+    overflow-x: auto;
+    text-transform: uppercase;
+
+    @media (min-width: 768px) {
+        margin: 0 -15px 40px;
+        font-size: 16px;
+    }
+
+    @media (min-width: 1200px) {
+        text-transform: none;
+        padding: 0;
+        margin: 0 0 40px;
+        border-bottom: 0;
+        display: block;
+        white-space: normal;
+        overflow: inherit;
+    }
 
     &__item {
-        border: 1px solid #E7E7E7;
+        border: 0;
+        display: inline-block;
+        margin-left: 15px;
 
-        &:nth-child(n+2) {
-            border-top: 0;
+        @media (min-width: 1200px) {
+            border: 1px solid #E7E7E7;
+            display: block;
+            margin-left: 0;
+
+            &:nth-child(n+2) {
+                border-top: 0;
+            }
         }
+
     }
 
     &__link {
         display: block;
         color: #2F2B38;
         text-decoration: none;
-        padding: 21px 14px;
-        border-left: 5px solid transparent;
+        padding: 0 0 6px;
+        // margin-bottom: -1px;
+
+        @media (min-width: 768px) {
+            padding: 11px 0;
+        }
+
+        @media (min-width: 1200px) {
+            border-left: 5px solid transparent;
+            padding: 21px 14px;
+            // margin-bottom: 0;
+        }
 
         &.active {
-            margin: -1px;
-            background: #FFFFFF;
-            box-sizing: border-box;
-            box-shadow: 0 8px 35px -8px rgba(0, 0, 0, 0.15);
-            border-left-color: $color_primary;
             color: $color_primary;
-            border-radius: 5px;
+            border-bottom: 1px solid;
+
+            @media (min-width: 1200px) {
+                box-shadow: 0 8px 35px -8px rgba(0, 0, 0, 0.15);
+                border-left-color: $color_primary;
+                border-radius: 5px;
+                margin: -1px;
+                background: #FFFFFF;
+                border-bottom: 0;
+            }
         }
     }
 }
