--- a/scss/components/lkNext.scss
+++ b/scss/components/lkNext.scss
@@ -1,6 +1,9 @@
 .lkNext {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 30px 0 50px;
+
+    @media (min-width: 768px) {
+        margin: 50px 0;
+    }
 
     .btn {
         width: 100%;
