--- a/scss/components/lkNumList.scss
+++ b/scss/components/lkNumList.scss
@@ -1,15 +1,24 @@
 .lkNumList {
     border-bottom: 1px solid #D1D1D1;
-    padding-bottom: 30px;
-    margin-bottom: 60px;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+        padding-bottom: 30px;
+        margin-bottom: 60px;
+    }
 
     &__item {}
 
     &__name {
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 180.52%;
         margin-bottom: 16px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+        }
     }
 
     &__body {
