--- a/scss/components/lkPast.scss
+++ b/scss/components/lkPast.scss
@@ -1,15 +1,22 @@
 .lkPast {
-    display: flex;
-    flex-wrap: wrap;
     margin-left: -30px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
     &__item {
         display: flex;
         padding-left: 30px;
-        margin-bottom: 30px;
-        width: 50%;
+        margin-bottom: 20px;
         font-size: 14px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 30px;
+            width: 50%;
+        }
 
         @media (min-width: 1200px) {
             width: 33.3%;
@@ -21,11 +28,15 @@
         border-radius: 15px;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         width: 100%;
-        padding: 39px 30px;
-        min-height: 177px;
+        padding: 29px 20px 30px;
         position: relative;
         overflow: hidden;
         transition: 0.3s;
+
+        @media (min-width: 768px) {
+            padding: 39px 30px;
+            min-height: 177px;
+        }
 
         &:hover {
             box-shadow: 0 0 10px rgba(24, 33, 42, 0.08);
@@ -34,16 +45,28 @@
 
     &__head {
         display: flex;
-        align-items: center;
+        flex-direction: column-reverse;
         justify-content: space-between;
-        margin-bottom: 8px;
+        margin-bottom: 11px;
+
+        @media (min-width: 768px) {
+            align-items: center;
+            flex-direction: row;
+            margin-bottom: 8px;
+        }
     }
 
     &__name {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 138.3%;
-        margin-right: 20px;
+        margin-top: 17px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+            margin-right: 20px;
+            margin-top: 0;
+        }
     }
 
     &__date {
@@ -64,8 +87,12 @@
         dl {
             display: flex;
             line-height: 1.57;
+            font-size: 13px;
             margin: 0 0 3px;
-            font-size: 14px;
+
+            @media (min-width: 768px) {
+                font-size: 14px;
+            }
 
             dt {
                 color: #656565;
@@ -81,8 +108,12 @@
         position: absolute;
         left: 0;
         bottom: 0;
-        height: 11px;
+        height: 6px;
         background: #A3A3A3;
+
+        @media (min-width: 768px) {
+            height: 11px;
+        }
 
         &.danger {
             background: #FF3115;
