--- a/scss/components/lkProgress.scss
+++ b/scss/components/lkProgress.scss
@@ -1,30 +1,46 @@
 .lkProgress {
-    display: flex;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    margin-left: -81px;
-    margin-bottom: -40px;
+
+    @media (min-width: 768px) {
+        display: flex;
+        align-items: flex-end;
+        flex-wrap: wrap;
+        margin-left: -81px;
+        margin-bottom: -40px;
+    }
 
     &__item {
-        width: 50%;
-        padding-left: 81px;
-        margin-bottom: 40px;
+        margin-bottom: 15px;
+
+        @media (min-width: 768px) {
+            padding-left: 81px;
+            width: 50%;
+            margin-bottom: 40px;
+        }
     }
 
     &__label {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 138.3%;
-        margin-bottom: 17px;
+        margin-bottom: 16px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+            margin-bottom: 17px;
+        }
     }
 
     &__line {
         background: #E7E7E7;
         border-radius: 3px;
-        height: 7px;
+        height: 5px;
         position: relative;
         overflow: hidden;
         margin-bottom: 7px;
+
+        @media (min-width: 768px) {
+            height: 7px;
+        }
 
         span {
             position: absolute;
@@ -63,10 +79,14 @@
 
     &__percent {
         font-weight: 500;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 138.3%;
         text-align: center;
         color: $color_primary;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+        }
     }
 
 }
