--- a/scss/components/lkReceipts.scss
+++ b/scss/components/lkReceipts.scss
@@ -1,22 +1,34 @@
 .lkReceipts {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -15px;
+
+    @media (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 -15px;
+        padding-bottom: 0;
+    }
 
     &:after {
         content: '';
         display: block;
         border-bottom: 1px solid #D1D1D1;
-        width: 100%;
-        margin: 10px 15px 0;
+        // width: 100%;
+        margin: 30px 0 0;
+
+        @media (min-width: 768px) {
+            margin: 10px 15px 0;
+        }
     }
 
     &__item {
-        width: calc(50% - 30px);
-        margin: 0 15px 30px;
+        margin: 0 0 20px;
         background: #FFFFFF;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         border-radius: 15px;
+
+        @media (min-width: 768px) {
+            width: calc(50% - 30px);
+            margin: 0 15px 30px;
+        }
 
         @media (min-width: 1200px) {
             width: calc(33.3% - 30px);
@@ -27,26 +39,48 @@
         background: $color_primary;
         color: $color_withe;
         border-radius: 15px 15px 0 0;
-        padding: 24px 22px 19px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        padding: 11px 20px 10px;
         font-weight: 600;
         line-height: 1.38;
+        min-height: 65px;
+        display: flex;
+        align-items: center;
+
+        @media (min-width: 768px) {
+            display: block;
+            min-height: inherit;
+            padding: 24px 22px 19px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     &__body {
-        padding: 17px 22px 28px;
+        padding: 12px 20px 22px;
+
+        @media (min-width: 768px) {
+            padding: 17px 22px 28px;
+        }
     }
 
     &__list {
-        margin-bottom: 15px;
+        margin-bottom: 11px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 15px;
+        }
 
         dl {
             display: flex;
-            font-size: 14px;
+            font-size: 12px;
             line-height: 1.57;
-            margin: 0 0 5px;
+            margin: 0 0 3px;
+
+            @media (min-width: 768px) {
+                font-size: 14px;
+                margin: 0 0 5px;
+            }
 
             dt {
                 color: #656565;
@@ -70,12 +104,16 @@
     &__link {
         a {
             font-weight: 800;
-            font-size: 14px;
+            font-size: 12px;
             line-height: 182.85%;
             letter-spacing: 0.05em;
             text-transform: uppercase;
             color: $color_primary;
             text-decoration-color: transparent;
+
+            @media (min-width: 768px) {
+                font-size: 14px;
+            }
 
             &:hover {
                 text-decoration-color: inherit;
