--- a/scss/components/lkRecomend.scss
+++ b/scss/components/lkRecomend.scss
@@ -1,10 +1,20 @@
 .lkRecomend {
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
+
+    @media (min-width: 768px) {
+        margin-bottom: 20px;
+    }
+
+    @include asyncSlider();
 
     .slick-list {
-        margin: 0 -30px;
+        margin: 0 -15px;
         // margin: 0 0 0 -30px;
         // padding: 30px;
+
+        @media (min-width: 768px) {
+            margin: 0 -30px;
+        }
     }
 
     &__group.smallBox {
