--- a/scss/components/lkSerts.scss
+++ b/scss/components/lkSerts.scss
@@ -1,11 +1,21 @@
 .lkSerts {
     display: flex;
     flex-wrap: wrap;
-    margin: 35px -15px 50px;
+    margin: 30px -15px 40px;
+
+    @media (min-width: 768px) {
+        margin: 35px -15px 50px;
+    }
 
     &__item {
-        width: calc(50% - 30px);
-        margin: 0 15px 40px;
+        width: 320px;
+        flex-grow: 1;
+        margin: 0 15px 20px;
+
+        @media (min-width: 768px) {
+            width: calc(50% - 30px);
+            margin: 0 15px 40px;
+        }
 
         @media (min-width: 1200px) {
             width: calc(33.3% - 30px);
@@ -15,37 +25,62 @@
     &__img {
         background: $color_withe;
         border-radius: 15px;
-        padding: 30px 35px;
-        margin-bottom: 17px;
+        padding: 23px 29px;
+        margin-bottom: 14px;
+        width: 100%;
+
+        @media (min-width: 768px) {
+            padding: 30px 35px;
+            margin-bottom: 17px;
+        }
 
         img {
             display: block;
+            width: 100%;
+            height: auto;
         }
     }
 
     &__name {
         font-weight: 500;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 129.3%;
         // text-align: center;
         // padding: 0 35px;
+
+        @media (min-width: 768px) {
+            font-size: 16px;
+        }
     }
 
     &__progress {
-        margin-bottom: 26px;
+        margin-bottom: 14px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 26px;
+        }
     }
 
     &__label {
-        font-size: 13px;
+        font-size: 12px;
         line-height: 129.3%;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
+
+        @media (min-width: 768px) {
+            font-size: 13px;
+            margin-bottom: 10px;
+        }
     }
 
     &__bar {
         position: relative;
-        height: 8px;
+        height: 6px;
         background: #EDEDED;
         border-radius: 14px;
+
+        @media (min-width: 768px) {
+            height: 8px;
+        }
 
         span {
             display: block;
