--- a/scss/components/lkTags.scss
+++ b/scss/components/lkTags.scss
@@ -4,25 +4,37 @@
     margin: 0 -5px;
 
     &__grid {
-        display: flex;
         margin: 25px 0 29px -30px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
     }
 
     &__col {
         padding-left: 30px;
-        width: 50%;
+        width: 100%;
+
+        @media (min-width: 768px) {
+            width: 50%;
+        }
     }
 
     &__title {
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 138.3%;
         margin-bottom: 12px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+        }
     }
 
     &__tag {
         margin: 0 5px 10px;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 149%;
         color: #2B89F8;
         display: flex;
@@ -31,6 +43,10 @@
         box-shadow: 0 4px 15px rgba(176, 187, 193, 0.25);
         border-radius: 16px;
         padding: 3px 8px;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+        }
 
         &.warning {
             color: #F57C00;
@@ -101,7 +117,7 @@
 
     &__check {
         margin: 0 5px 10px;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 149%;
         color: #2B89F8;
         display: inline-flex;
@@ -111,6 +127,10 @@
         border-radius: 16px;
         padding: 3px 8px;
         cursor: pointer;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+        }
 
         input {
             border-radius: 50%;
