--- a/scss/components/onOff.scss
+++ b/scss/components/onOff.scss
@@ -1,15 +1,23 @@
 .onOff {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+        margin-bottom: 50px;
+    }
 
     &__item {
         position: relative;
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
-        padding: 16px 17px 16px 25px;
+        padding: 16px 15px 16px 20px;
         z-index: 1;
         margin-bottom: 20px;
         min-height: 63px;
+
+        @media (min-width: 768px) {
+            padding: 16px 17px 16px 25px;
+        }
     }
 
     &__name {
@@ -18,6 +26,11 @@
         margin-right: 20px;
         color: #A3A3A3;
         transition: 0.3s;
+        font-size: 12px;
+
+        @media (min-width: 768px) {
+            font-size: 16px;
+        }
 
         &:before {
             content: '';
