--- a/scss/components/prmoSlider.scss
+++ b/scss/components/prmoSlider.scss
@@ -1,72 +1,77 @@
 .prmoSlider {
-    margin: 0 -30px 30px;
+    display: none;
 
-    &__item {
-        border-radius: 15px;
-        background: #FFFFFF;
-        box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
-        margin: 10px 30px 30px;
-    }
+    @media (min-width: 1200px) {
+        display: block;
+        margin: 0 -30px 30px;
 
-    &__img {
-        height: 245px;
-        border-radius: 15px 15px 0 0;
-        overflow: hidden;
-
-        img {
-            display: block;
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
+        &__item {
+            border-radius: 15px;
+            background: #FFFFFF;
+            box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
+            margin: 10px 30px 30px;
         }
-    }
 
-    &__body {
-        padding: 18px 28px 33px;
-        line-height: 1.57;
-        font-size: 14px;
-    }
+        &__img {
+            height: 245px;
+            border-radius: 15px 15px 0 0;
+            overflow: hidden;
 
-    &__title {
-        font-size: 20px;
-        font-weight: 500;
-        margin-bottom: 9px;
-    }
-
-    &__text {
-        margin-bottom: 19px;
-    }
-
-    &__action {
-        .btn {
-            width: 100%;
-        }
-    }
-
-    .slick-dots {
-        list-style: none;
-        padding: 0;
-        margin: 0 30px 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        li {
-            width: 10px;
-            height: 10px;
-            border: 1px solid $color_primary;
-            border-radius: 50%;
-            margin: 0 7px;
-            cursor: pointer;
-
-            &.slick-active {
-                background-color: $color_primary;
-                cursor: default;
+            img {
+                display: block;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
             }
         }
 
-        button {
-            display: none;
+        &__body {
+            padding: 18px 28px 33px;
+            line-height: 1.57;
+            font-size: 14px;
+        }
+
+        &__title {
+            font-size: 20px;
+            font-weight: 500;
+            margin-bottom: 9px;
+        }
+
+        &__text {
+            margin-bottom: 19px;
+        }
+
+        &__action {
+            .btn {
+                width: 100%;
+            }
+        }
+
+        .slick-dots {
+            list-style: none;
+            padding: 0;
+            margin: 0 30px 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            li {
+                width: 10px;
+                height: 10px;
+                border: 1px solid $color_primary;
+                border-radius: 50%;
+                margin: 0 7px;
+                cursor: pointer;
+
+                &.slick-active {
+                    background-color: $color_primary;
+                    cursor: default;
+                }
+            }
+
+            button {
+                display: none;
+            }
         }
     }
 }
