--- a/scss/components/task.scss
+++ b/scss/components/task.scss
@@ -2,10 +2,13 @@
     width: 100%;
 
     &__head {
-        display: flex;
-        margin-bottom: 30px;
-        align-items: center;
-        align-items: center;
+        margin-bottom: 28px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            align-items: center;
+            margin-bottom: 30px;
+        }
     }
 
     &__status {
@@ -18,9 +21,12 @@
         text-transform: uppercase;
         color: #FFFFFF;
         padding: 10px 19px;
-        margin-right: 30px;
-        display: flex;
         align-items: center;
+        display: inline-flex;
+
+        @media (min-width: 768px) {
+            margin-right: 30px;
+        }
 
         &.danger {
             background: #F72323;
@@ -56,11 +62,17 @@
     &__time {
         display: flex;
         align-items: center;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 1.2;
         display: flex;
         align-items: flex-end;
         color: #000000;
+        margin-top: 17px;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+            margin-top: 0;
+        }
 
         .icon_clock {
             color: $color_primary;
@@ -70,9 +82,13 @@
     }
 
     &__body {
-        display: flex;
-        max-width: 1103px;
-        margin-bottom: 37px;
+        margin-bottom: 17px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            max-width: 1103px;
+            margin-bottom: 37px;
+        }
 
         + .task__body {
             border-top: 1px solid #DEDEDE;
@@ -82,15 +98,25 @@
     }
 
     &__content {
-        flex-grow: 1;
-        min-width: 0;
+        margin-bottom: 26px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 0;
+            flex-grow: 1;
+            min-width: 0;
+        }
     }
 
     &__title {
         font-weight: 500;
-        font-size: 28px;
+        font-size: 22px;
         line-height: 138.3%;
-        margin: 0 0 18px;
+        margin: 0 0 12px;
+
+        @media (min-width: 768px) {
+            font-size: 28px;
+            margin: 0 0 18px;
+        }
     }
 
     &__text {
@@ -98,12 +124,19 @@
         line-height: 1.64;
 
         p {
-            margin: 14px 0;
+            margin: 10px 0;
+
+            @media (min-width: 768px) {
+                margin: 14px 0;
+            }
         }
     }
 
     &__aside {
-        flex: none;
-        margin-left: 50px;
+
+        @media (min-width: 768px) {
+            flex: none;
+            margin-left: 50px;
+        }
     }
 }
