--- a/scss/components/taskComment.scss
+++ b/scss/components/taskComment.scss
@@ -1,11 +1,16 @@
 .taskComment {
     &__title {
-        display: flex;
-        align-items: center;
         font-weight: 500;
-        font-size: 28px;
+        font-size: 22px;
         line-height: 138.3%;
-        margin: 0 0 24px;
+        margin: 0 0 27px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            align-items: center;
+            font-size: 28px;
+            margin: 0 0 24px;
+        }
     }
 
     &__bage {
@@ -15,10 +20,15 @@
         font-size: 14px;
         line-height: 166.52%;
         color: $color_withe;
-        display: flex;
+        display: inline-flex;
         align-items: center;
         padding: 7px 10px;
-        margin-left: 30px;
+        margin-top: 17px;
+
+        @media (min-width: 768px) {
+            margin-left: 30px;
+            margin-top: 0;
+        }
     }
 
     &__ball {
@@ -28,14 +38,22 @@
     }
 
     &__body {
-        margin-bottom: 50px;
-        max-width: 705px;
+        margin-bottom: 30px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 50px;
+            max-width: 705px;
+        }
     }
 
     &__head {
         display: flex;
         align-items: center;
-        margin-bottom: 16px;
+        margin-bottom: 15px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 16px;
+        }
     }
 
     &__photo {
@@ -56,14 +74,22 @@
 
     &__name {
         font-weight: 500;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 156.52%;
+
+        @media (min-width: 768px) {
+            font-size: 16px;
+        }
     }
 
     &__prof {
-        font-size: 13px;
+        font-size: 12px;
         line-height: 166.52%;
         color: #7B7B7B;
+
+        @media (min-width: 768px) {
+            font-size: 13px;
+        }
     }
 
     &__text {
