--- a/scss/components/taskEdit.scss
+++ b/scss/components/taskEdit.scss
@@ -1,35 +1,77 @@
 .taskEdit {
     border-top: 1px solid #DEDEDE;
-    padding: 40px 0;
+    padding: 26px 0;
+
+    @media (min-width: 768px) {
+        padding: 40px 0;
+    }
 
     &__title {
         font-style: normal;
         font-weight: 500;
-        font-size: 28px;
+        font-size: 22px;
         line-height: 138.3%;
-        margin: 0 0 30px;
+        margin: 0 0 20px;
+
+        @media (min-width: 768px) {
+            font-size: 28px;
+            margin: 0 0 30px;
+        }
     }
 
     &__body {
-        display: flex;
-        max-width: 1103px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            max-width: 1103px;
+        }
     }
 
     &__form {
-        max-width: 725px;
-        min-width: 0;
-        flex-grow: 1;
+
+        @media (min-width: 768px) {
+            max-width: 725px;
+            min-width: 0;
+            flex-grow: 1;
+        }
 
         textarea {
-            height: 237px;
+            height: 158px;
+
+            @media (min-width: 768px) {
+                height: 237px;
+            }
         }
     }
 
     &__action {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        @media (min-width: 768px) {
+            flex-direction: row;
+            align-items: center;
+        }
+
         .btn {
-            margin-right: 16px;
             width: 100%;
             max-width: 336px;
+            order: 2;
+
+            @media (min-width: 768px) {
+                margin-right: 16px;
+                order: 0;
+            }
+        }
+
+        .upload {
+            order: 1;
+            padding: 0 12px 19px 0;
+            @media (min-width: 768px) {
+                order: 2;
+                padding: 24px;
+            }
         }
     }
 
