--- a/pug/th-analitics.pug
+++ b/pug/th-analitics.pug
@@ -23,24 +23,44 @@ block content
                         tbody
                             tr
                                 td
+                                    .table__label Самый популярный курс
                                     a(href="") Стратегический менеджмент
-                                td 10%
-                                td 10 000
+                                td 
+                                    .table__label Интерес к моим курсам 
+                                    | 10%
+                                td
+                                    .table__label Количество слушателей на моих курсах
+                                    | 10 000
                             tr
                                 td
+                                    .table__label Самый популярный курс
                                     a(href="") Система управления аэропортом
-                                td 10%
-                                td 10 000
+                                td
+                                    .table__label Интерес к моим курсам 
+                                    | 10%
+                                td
+                                    .table__label Количество слушателей на моих курсах
+                                    | 10 000
                             tr
                                 td
+                                    .table__label Самый популярный курс
                                     a(href="") Менеджмент в финансовой организации
-                                td 10%
-                                td 10 000
+                                td
+                                    .table__label Интерес к моим курсам 
+                                    | 10%
+                                td
+                                    .table__label Количество слушателей на моих курсах
+                                    | 10 000
                             tr
                                 td
+                                    .table__label Самый популярный курс
                                     a(href="") Управление персоналом
-                                td 10%
-                                td 10 000
+                                td
+                                    .table__label Интерес к моим курсам 
+                                    | 10%
+                                td
+                                    .table__label Количество слушателей на моих курсах
+                                    | 10 000
 
 
                     h2.subtitle Статистика по курсам
@@ -54,21 +74,41 @@ block content
                         tbody
                             tr
                                 td
+                                    .table__label Наименование курса
                                     a(href="") Стратегический менеджмент
-                                td 1 000
-                                td 100% (1 000 человек)
+                                td
+                                    .table__label Записались на курс
+                                    | 1 000
+                                td
+                                    .table__label Завершили обучение
+                                    | 100% (1 000 человек)
                             tr
                                 td
+                                    .table__label Наименование курса
                                     a(href="") Система управления аэропортом
-                                td 700
-                                td 50% (350 человек)
+                                td
+                                    .table__label Записались на курс
+                                    | 700
+                                td
+                                    .table__label Завершили обучение
+                                    | 50% (350 человек)
                             tr
                                 td
+                                    .table__label Наименование курса
                                     a(href="") Менеджмент в финансовой организации
-                                td 800
-                                td 25% (200 человек)
+                                td
+                                    .table__label Записались на курс
+                                    | 800
+                                td
+                                    .table__label Завершили обучение
+                                    | 25% (200 человек)
                             tr
                                 td
+                                    .table__label Наименование курса
                                     a(href="") Управление персоналом
-                                td 15 000
-                                td 33% (5 000 человек)
+                                td
+                                    .table__label Записались на курс
+                                    | 15 000
+                                td
+                                    .table__label Завершили обучение
+                                    | 33% (5 000 человек)
