--- a/pug/th-user.pug
+++ b/pug/th-user.pug
@@ -105,7 +105,8 @@ block content
 
                     h2.subtitle Мои сертификаты
 
-                    +sert([{img: 1},{img: 2},{img: 3}])
+                    .lkSerts_slider
+                        +sert([{img: 1},{img: 2},{img: 3}])
 
                     .lkForm
                         .form__title Добавление сертификата
