--- a/scss/components/lk.scss
+++ b/scss/components/lk.scss
@@ -117,55 +117,59 @@
     }
 
     &__links {
-        position: sticky;
-        top: 10px;
-        order: 2;
-        margin-left: 64px;
+        display: none;
+        @media (min-width: 1200px) {
+            display: block;
+            position: sticky;
+            top: 10px;
+            order: 2;
+            margin-left: 64px;
 
-        ul {
-            align-self: flex-start;
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            position: relative;
+            ul {
+                align-self: flex-start;
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                position: relative;
 
-            &:before {
-                content: '';
-                position: absolute;
-                display: block;
-                width: 3px;
-                border-radius: 3px;
-                background: #EBEBEB;
-                top: 0;
-                left: 0;
-                bottom: 0;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    display: block;
+                    width: 3px;
+                    border-radius: 3px;
+                    background: #EBEBEB;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                }
+
             }
 
-        }
+            li {
+                margin-bottom: 29px;
 
-        li {
-            margin-bottom: 29px;
-
-            &:last-child {
-                margin-bottom: 0;
+                &:last-child {
+                    margin-bottom: 0;
+                }
             }
-        }
 
-        a {
-            display: inline-block;
-            // margin-left: -3px;
-            padding-left: 21px;
-            font-weight: bold;
-            line-height: 182.85%;
-            letter-spacing: 0.05em;
-            text-transform: uppercase;
-            color: #A3A3A3;
-            text-decoration: none;
-            border-left: 3px solid #EBEBEB;
+            a {
+                display: inline-block;
+                // margin-left: -3px;
+                padding-left: 21px;
+                font-weight: bold;
+                line-height: 182.85%;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
+                color: #A3A3A3;
+                text-decoration: none;
+                border-left: 3px solid #EBEBEB;
 
-            &.active {
-                color: #2B89F8;
-                border-left: 3px solid #2B89F8;
+                &.active {
+                    color: #2B89F8;
+                    border-left: 3px solid #2B89F8;
+                }
             }
         }
     }
