--- a/scss/components/lkAverage.scss
+++ b/scss/components/lkAverage.scss
@@ -1,19 +1,32 @@
 .lkAverage {
     display: flex;
-    margin: 0 -15px 20px;
+    flex-wrap: wrap;
+    margin: 0 -10px 20px;
+
+    @media (min-width: 768px) {
+        margin: 0 -15px 20px;
+    }
 
     &__item {
-        width: calc(33.3% - 30px);
-        margin: 0 15px 30px;
-        padding: 51px 25px 25px;
+        width: 250px;
+        margin: 0 10px 20px;
+        padding: 46px 25px 25px;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         border-radius: 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        min-height: 255px;
+        min-height: 225px;
         color: $color_withe;
+        flex-grow: 1;
+
+        @media (min-width: 768px) {
+            width: calc(33.3% - 30px);
+            padding: 51px 25px 25px;
+            margin: 0 15px 30px;
+            min-height: 255px;
+        }
 
         &.primary {
             background: $color_primary;
@@ -34,14 +47,22 @@
         font-weight: 600;
         font-size: 60px;
         line-height: 138.3%;
-        margin-bottom: 6px;
+        margin-bottom: 1px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 6px;
+        }
     }
 
     &__label {
-        font-size: 18px;
+        font-size: 16px;
         line-height: 21px;
         max-width: 200px;
         height: 60px;
+
+        @media (min-width: 768px) {
+            font-size: 18px;
+        }
     }
 
 }
