--- a/scss/components/lkCourseFooter.scss
+++ b/scss/components/lkCourseFooter.scss
@@ -1,13 +1,22 @@
 .lkCourseFooter {
-    display: flex;
-    justify-content: flex-end;
-    margin-left: -30px;
-    margin-bottom: 110px;
+    margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+        display: flex;
+        justify-content: flex-end;
+        margin-left: -30px;
+        margin-bottom: 110px;
+    }
 
     .btn {
         width: 100%;
-        max-width: 353px;
-        margin-left: 30px;
-        padding: 20px;
+        margin-bottom: 10px;
+
+        @media (min-width: 768px) {
+            max-width: 353px;
+            margin-left: 30px;
+            padding: 20px;
+            margin-bottom: 0;
+        }
     }
 }
