--- a/scss/components/lkCourseMonth.scss
+++ b/scss/components/lkCourseMonth.scss
@@ -1,5 +1,8 @@
 .lkCourseMonth {
-    margin-top: 35px;
     border-top: 1px solid #E9E9E9;
     padding-top: 31px;
+
+    @media (min-width: 768px) {
+        margin-top: 35px;
+    }
 }
