--- a/scss/components/lkDeveloping.scss
+++ b/scss/components/lkDeveloping.scss
@@ -1,18 +1,29 @@
 .lkDeveloping {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
     margin: 0 -15px 20px;
 
+    @media (min-width: 768px) {
+        align-items: flex-start;
+        margin: 0 -15px 20px;
+    }
+
     &__item {
-        width: calc(100% - 30px);
+        width: 250px;
         margin: 0 15px 30px;
         background: #FFFFFF;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         border-radius: 15px;
-        padding: 26px 30px;
+        padding: 22px 20px 24px;
         display: flex;
         align-items: flex-start;
+        flex-grow: 1;
+
+        @media (min-width: 768px) {
+            width: calc(100% - 30px);
+            padding: 26px 30px;
+            flex-grow: 0;
+        }
 
         @media (min-width: 1200px) {
             width: calc(50% - 30px);
@@ -27,7 +38,11 @@
     &__tasks {
         font-size: 12px;
         color: #A3A3A3;
-        margin-bottom: 6px;
+        margin-bottom: 12px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 6px;
+        }
 
         span {
             color: $main_color;
@@ -36,20 +51,29 @@
 
     &__name {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 138.3%;
-        margin-bottom: 5px;
+        margin-bottom: 7px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+            margin-bottom: 5px;
+        }
     }
 
     &__deadline {
         font-size: 14px;
-        margin-bottom: 17px;
+        margin-bottom: 16px;
+
+        @media (min-width: 768px) {
+            margin-bottom: 17px;
+        }
     }
 
     &__link {
         a {
             font-weight: 800;
-            font-size: 14px;
+            font-size: 12px;
             line-height: 182.85%;
             letter-spacing: 0.05em;
             text-transform: uppercase;
@@ -57,6 +81,10 @@
             text-decoration: none;
             display: inline-flex;
             align-items: center;
+
+            @media (min-width: 768px) {
+                font-size: 14px;
+            }
         }
 
         .icon_arrow {
@@ -70,8 +98,9 @@
         border-radius: 5px;
         width: 123px;
         text-align: center;
-        padding: 6px;
-        font-size: 12px;
+        font-size: 11px;
+        padding: 5px;
+        margin-bottom: 12px;
         font-weight: 600;
         line-height: 1.25;
         letter-spacing: 0.025em;
@@ -81,6 +110,12 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
+
+        @media (min-width: 768px) {
+            font-size: 12px;
+            padding: 6px;
+            margin-bottom: 0;
+        }
 
         &.success {
             background: $color_success;
