--- a/scss/components/lkForCheck.scss
+++ b/scss/components/lkForCheck.scss
@@ -4,19 +4,28 @@
     flex-wrap: wrap;
 
     &__item {
-        width: calc(100% - 30px);
+        width: 250px;
+        flex-grow: 1;
         margin: 0 15px 30px;
         background: #FFFFFF;
         box-shadow: 0 10px 30px rgba(24, 33, 42, 0.08);
         border-radius: 15px;
-        padding: 30px;
+        padding: 28px 20px 38px;
+
+        @media (min-width: 768px) {
+            width: calc(100% - 30px);
+            padding: 30px;
+        }
 
         @media (min-width: 1200px) {
             width: calc(50% - 30px);
+            flex-grow: 0;
         }
 
         &_tripple {
-            width: calc(50% - 30px);
+            @media (min-width: 768px) {
+                width: calc(50% - 30px);
+            }
 
             @media (min-width: 1200px) {
                 width: calc(33.3% - 30px);
@@ -26,24 +35,35 @@
 
     &__name {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 138.3%;
         margin-bottom: 11px;
+
+        @media (min-width: 768px) {
+            font-size: 20px;
+        }
     }
 
     &__props {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -10px;
         font-size: 14px;
         line-height: 1.4;
-        margin-bottom: 10px;
+        margin-bottom: 22px;
+
+        @media (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -10px;
+            margin-bottom: 10px;
+        }
     }
 
     &__prop {
-        padding-left: 10px;
-        width: 50%;
         margin-bottom: 10px;
+
+        @media (min-width: 768px) {
+            padding-left: 10px;
+            width: 50%;
+        }
 
         .danger {
             color: $color_danger;
@@ -60,8 +80,13 @@
     &__check {
         .btn {
             width: 100%;
-            max-width: 201px;
-            padding: 16.5px 10px;
+            max-width: 350px;
+
+            @media (min-width: 768px) {
+                max-width: 201px;
+                padding: 16.5px 10px;
+
+            }
         }
     }
 
