--- a/scss/components/lkGroup.scss
+++ b/scss/components/lkGroup.scss
@@ -1,5 +1,9 @@
 .lkGroup {
     margin-bottom: 50px;
-    padding-bottom: 60px;
     border-bottom: 1px solid #E9E9E9;
+
+    @media (min-width: 768px) {
+        padding-bottom: 60px;
+
+    }
 }
