--- a/scss/components/lkLesson.scss
+++ b/scss/components/lkLesson.scss
@@ -1,22 +1,37 @@
 .lkLesson {
     + .lkLesson {
         border-top: 1px solid #DEDEDE;
-        margin-top: 60px;
+        margin-top: 40px;
         padding-top: 60px;
+
+        @media (min-width: 768px) {
+            margin-top: 60px;
+        }
     }
 
     &__head {
         background: #FFFFFF;
         border-radius: 10px;
-        margin-bottom: 35px;
-        padding: 27px 24px;
-        font-size: 14px;
-        display: flex;
+        font-size: 12px;
+        padding: 19px 20px 12px;
+        margin-bottom: 29px;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+            display: flex;
+            padding: 27px 24px;
+            margin-bottom: 35px;
+        }
     }
 
     &__headItem {
         display: flex;
-        margin-right: 56px;
+        margin-bottom: 7px;
+
+        @media (min-width: 768px) {
+            margin-right: 56px;
+            margin-bottom: 0;
+        }
     }
 
     &__headLabel {
