--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -1,9 +1,14 @@
 .table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    font-size: 13px;
+    display: block;
     width: 100%;
-    margin-bottom: 50px;
+
+    @media (min-width: 768px) {
+        display: table;
+        table-layout: fixed;
+        border-collapse: collapse;
+        font-size: 13px;
+        margin-bottom: 50px;
+    }
 
     td,
     th {
@@ -11,45 +16,77 @@
     }
 
     th {
-        background: #E7E7E7;
-        text-align: left;
-        font-weight: 400;
-        text-transform: uppercase;
-        padding: 12px 14px;
-        font-size: 12px;
-        white-space: nowrap;
+        display: none;
+        @media (min-width: 768px) {
+            display: table-cell;
+            background: #E7E7E7;
+            text-align: left;
+            font-weight: 400;
+            text-transform: uppercase;
+            padding: 12px 14px;
+            font-size: 12px;
+            white-space: nowrap;
 
-        &:first-child {
-            border-radius: 10px 0 0 0;
-        }
+            &:first-child {
+                border-radius: 10px 0 0 0;
+            }
 
-        &:last-child {
-            border-radius: 0 10px 0 0;
+            &:last-child {
+                border-radius: 0 10px 0 0;
+            }
         }
     }
 
     td {
-        background-color: $color_withe;
-        padding: 10px 14px;
+        display: block;
+        margin-bottom: 10px;
+
+        @media (min-width: 768px) {
+            display: table-cell;
+            background-color: $color_withe;
+            padding: 10px 14px;
+            margin-bottom: 0;
+        }
     }
 
     tbody {
-        tr {
-            border: 1px solid #E3E3E3;
+        display: block;
 
-            &:nth-child(even) {
-                td {
-                    background: #F8F8F8;
+        @media (min-width: 768px) {
+            display: table-row-group;
+        }
+
+        tr {
+            display: block;
+            margin-bottom: 10px;
+            padding: 19px 20px 16px;
+            background-color: $color_withe;
+            border-radius: 15px;
+
+            @media (min-width: 768px) {
+                background-color: transparent;
+                border-radius: 0;
+                display: table-row;
+                border: 1px solid #E3E3E3;
+                margin-bottom: 0;
+                padding: 0;
+
+                &:nth-child(even) {
+                    td {
+                        background: #F8F8F8;
+                    }
                 }
             }
         }
     }
 
     &__name {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        max-width: 179px;
+        @media (min-width: 768px) {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            max-width: 179px;
+        }
     }
 
     a {
@@ -57,6 +94,17 @@
 
         &:hover {
             text-decoration: underline;
+        }
+    }
+
+    &__label {
+        line-height: 1.42;
+        // font-size: 14px;
+        color: #656565;
+        margin-bottom: 3px;
+
+        @media (min-width: 768px) {
+            display: none;
         }
     }
 }
