--- a/scss/components/taskEdit.scss
+++ b/scss/components/taskEdit.scss
@@ -20,10 +20,12 @@
     }
 
     &__body {
+        display: flex;
+        flex-direction: column;
 
         @media (min-width: 768px) {
-            display: flex;
             max-width: 1103px;
+            flex-direction: row;
         }
     }
 
@@ -77,7 +79,14 @@
 
     &__assessment {
         flex: none;
-        margin-left: 30px;
+        order: -1;
+        margin-bottom: 20px;
+
+        @media (min-width: 768px) {
+            order: 2;
+            margin-left: 30px;
+            margin-bottom: 0;
+        }
 
         .select2-container--default {
             width: 100% !important;
