--- a/scss/core/_navbar.scss
+++ b/scss/core/_navbar.scss
@@ -122,11 +122,11 @@
 		display: flex;
 		flex-direction: column;
 		position: fixed;
-		right: -300px;
+		right: -282px;
 		top: 0;
 		bottom: 0;
 		background-color: $color_withe;
-		width: 300px;
+		width: 282px;
 		z-index: 10;
 		overflow: hidden;
 		transition: right 0.3s;
@@ -146,6 +146,7 @@
 			right: 0;
 			bottom: 0;
 			left: 0;
+			z-index: 9;
 			background-color: rgba(#1C1D24, 0.6);
 		}
 
@@ -153,9 +154,53 @@
 
 	&__header {
 		border-bottom: 1px solid #EEEEEE;
-		padding: 17px 24px;
+		padding: 17px 44px 17px 24px;
+		position: relative;
+		display: flex;
+		align-items: center;
+		color: #ADADAD;
+
+		.icon_close {
+			position: absolute;
+			right: 20px;
+			top: 23px;
+			color: #E4E4E4;
+			font-size: 17px;
+		}
+
+		.icon_view {
+			font-size: 22px;
+		}
 
 		@media (min-width: 1200px) {
+			display: none;
+		}
+	}
+
+	&__search {
+		padding: 25px 24px 0;
+
+		.search {
+			position: relative;
+
+			input {
+				width: 100%;
+				text-transform: none;
+				padding: 6px 25px 6px 11px;
+				font-size: 12px;
+			}
+
+			.icon_search {
+				font-size: 11px;
+				color: #7D7C80;
+				position: absolute;
+				right: 10px;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+
+		@media (min-width: 768px) {
 			display: none;
 		}
 	}
@@ -173,10 +218,42 @@
 
 	&__footer {
 		border-top: 1px solid #EEEEEE;
-		padding: 35px 24px 25px;
+		padding: 41px 24px 40px;
 
 		@media (min-width: 1200px) {
 			display: none;
+		}
+
+		.soc {
+			margin-left: -10px;
+
+			a {
+				font-size: 24px;
+				padding-left: 10px;
+				color: #E4E4E4;
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	&__contact {
+		text-transform: uppercase;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		margin-bottom: 15px;
+
+		a {
+			color: #2F2B38;
+			display: inline-flex;
+			align-items: center;
+			margin-bottom: 14px;
+			text-decoration: none;
+
+			i {
+				color: #2B89F8;
+				margin-right: 13px;
+			}
 		}
 	}
 }
